# mediaplayer-lab9

./: CMakeLists.txt  Main.qml  PlayerPage.qml  PlaylistPage.qml  SettingsPage.qml  databasemanager.cpp  databasemanager.h  main.cpp  playermodel.cpp  playermodel.h  playerviewmodel.cpp  playerviewmodel.h  playlistmanager.cpp  playlistmanager.h
.github/workflows/: build.yml
tests/: tst_player.cpp
